--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,16 @@
  *
  * Made By MaterializeCSS.com
  */
-
+body{
+background: #fdd835;
+}
+#header {
+  background: black;
+  color: #fdd835;
+}
 nav ul a,
 nav .brand-logo {
-  color: #444;
+  color: #ff9e80;
 }
 
 p {
@@ -16,14 +22,15 @@ p {
 }
 
 .sidenav-trigger {
-  color: #26a69a;
+  color: #ff9e80;
 }
 
 .parallax-container {
   min-height: 380px;
   line-height: 0;
   height: auto;
-  color: rgba(255,255,255,.9);
+  color: #ff9e80;
+  
 }
   .parallax-container .section {
     width: 100%;
